# zenoh-pico-zephyr

./: CMakeLists.txt  README.md  prj.conf
src/: main.c
